--- a/AdminPortal/package.json
+++ b/AdminPortal/package.json
@@ -31,6 +31,7 @@
     "emailjs": "^2.2.0",
     "express-recaptcha": "^4.0.2",
     "file-saver": "^2.0.5",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "ng-pick-datetime": "^7.0.0",
     "ng-recaptcha": "^3.0.5",
