--- a/AdminPortal/package.json
+++ b/AdminPortal/package.json
@@ -1,67 +1,52 @@
 {
-  "name": "d1-admin-panel",
+  "name": "admin-portal",
   "version": "0.0.0",
-  "license": "MIT",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.0",
-    "@angular/cdk": "^5.2.2",
-    "@angular/common": "^5.2.0",
-    "@angular/compiler": "^5.2.0",
-    "@angular/core": "^5.2.0",
-    "@angular/forms": "^5.2.0",
-    "@angular/http": "^5.2.0",
-    "@angular/material": "^5.2.2",
-    "@angular/platform-browser": "^5.2.0",
-    "@angular/platform-browser-dynamic": "^5.2.0",
-    "@angular/router": "^5.2.0",
-    "ajv": "^6.0.0",
-    "angular2-datetimepicker": "^1.1.1",
-    "angular5-recaptcha": "0.0.2",
-    "bootstrap": "^4.5.3",
-    "core-js": "^2.4.1",
-    "emailjs": "^2.2.0",
-    "express-recaptcha": "^4.0.2",
-    "file-saver": "^2.0.5",
+    "@angular/animations": "^16.2.0",
+    "@angular/cdk": "^16.2.0",
+    "@angular/common": "^16.2.0",
+    "@angular/compiler": "^16.2.0",
+    "@angular/core": "^16.2.0",
+    "@angular/flex-layout": "^15.0.0-beta.42",
+    "@angular/forms": "^16.2.0",
+    "@angular/material": "^16.2.0",
+    "@angular/platform-browser": "^16.2.0",
+    "@angular/platform-browser-dynamic": "^16.2.0",
+    "@angular/router": "^16.2.0",
+    "admin-lte": "3.2",
+    "bootstrap": "^5.3.1",
+    "crypto-js": "^4.1.1",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.5.1",
-    "ng-pick-datetime": "^7.0.0",
-    "ng-recaptcha": "^3.0.5",
-    "ngx-loading": "^1.0.14",
-    "ngx-pagination": "^3.1.1",
-    "ngx-toastr": "^8.10.2",
-    "npm": "^5.10.0",
-    "rxjs": "^5.5.6",
-    "ts-md5": "^1.2.4",
-    "xlsx": "^0.17.0",
-    "zone.js": "^0.8.19"
+    "jquery": "^3.7.0",
+    "ngx-pagination": "^6.0.3",
+    "ngx-toastr": "^17.0.2",
+    "popper.js": "^1.16.1",
+    "rxjs": "~7.8.0",
+    "ts-md5": "^1.3.1",
+    "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular/cli": "~1.7.0",
-    "@angular/compiler-cli": "^5.2.0",
-    "@angular/language-service": "^5.2.0",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "codelyzer": "^4.0.1",
-    "jasmine-core": "~2.8.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
+    "@angular-devkit/build-angular": "^16.2.0",
+    "@angular/cli": "~16.2.0",
+    "@angular/compiler-cli": "^16.2.0",
+    "@types/crypto-js": "^4.1.1",
+    "@types/jasmine": "~4.3.0",
+    "jasmine-core": "~4.6.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "typescript": "~5.1.3"
   }
 }
