--- a/AdminPortal/package.json
+++ b/AdminPortal/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@fortawesome/fontawesome-free": "^6.4.2",
     "admin-lte": "3.2",
     "bootstrap": "^5.3.1",
     "crypto-js": "^4.1.1",
