--- a/AdminPortal/angular.json
+++ b/AdminPortal/angular.json
@@ -29,6 +29,7 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/font-awesome/css/font-awesome.min.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+              "node_modules/ngx-spinner/animations/ball-beat.css",
               "src/styles.css"
             ],
             "scripts": [
