--- a/AdminPortal/package.json
+++ b/AdminPortal/package.json
@@ -28,6 +28,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.7.0",
     "ngx-pagination": "^6.0.3",
+    "ngx-spinner": "^16.0.2",
     "ngx-toastr": "^17.0.2",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
