--- a/AdminPortal/angular.json
+++ b/AdminPortal/angular.json
@@ -30,6 +30,7 @@
               "node_modules/font-awesome/css/font-awesome.min.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "node_modules/ngx-spinner/animations/ball-beat.css",
+              "node_modules/ngx-spinner/animations/ball-spin-clockwise-fade-rotating.css",
               "src/styles.css"
             ],
             "scripts": [
