--- a/AdminPortal/angular.json
+++ b/AdminPortal/angular.json
@@ -31,6 +31,7 @@
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "node_modules/ngx-spinner/animations/ball-beat.css",
               "node_modules/ngx-spinner/animations/ball-spin-clockwise-fade-rotating.css",
+              "node_modules/ngx-toastr/toastr.css",
               "src/styles.css"
             ],
             "scripts": [
