--- a/AdminPortal/package.json
+++ b/AdminPortal/package.json
@@ -22,20 +22,24 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@fortawesome/fontawesome-free": "^6.4.2",
+    "@types/xlsx": "^0.0.36",
     "admin-lte": "3.2",
     "angular-froala-wysiwyg": "^4.1.1",
     "bootstrap": "^5.3.1",
     "crypto-js": "^4.1.1",
+    "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
     "jquery": "^3.7.0",
     "ngx-pagination": "^6.0.3",
     "ngx-spinner": "^16.0.2",
     "ngx-toastr": "^17.0.2",
+    "papaparse": "^5.4.1",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "ts-md5": "^1.3.1",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
+    "xlsx-style": "^0.8.13",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
