--- a/AdminPortal/package.json
+++ b/AdminPortal/package.json
@@ -35,6 +35,8 @@
     "ngx-toastr": "^17.0.2",
     "papaparse": "^5.4.1",
     "popper.js": "^1.16.1",
+    "primeicons": "^6.0.1",
+    "primeng": "^16.9.1",
     "rxjs": "~7.8.0",
     "ts-md5": "^1.3.1",
     "tslib": "^2.3.0",
